<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="start"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_img_login" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:text="@string/login"
                android:visibility="visible"
                android:textColor="@color/light_black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="35sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:layout_marginHorizontal="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/light_black"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="15dp"
                    android:textSize="15sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:layout_marginHorizontal="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/light_black"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="145dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"
                app:cornerRadius="5dp"
                android:text="@string/login"
                app:backgroundTint="@color/colorPrimary"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/don_t_have_an_account_yet" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/sign_up"
                    android:background="@drawable/custom_ripple_white"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/transparent_light_black"
        android:padding="100dp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login_animation.json"
        app:lottie_loop="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
