<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:paddingTop="10dp"
                android:text="@string/profile"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:paddingTop="15dp"
                android:text="@string/please_fill_in_your_details"
                android:textColor="#212121"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/ic_businessman"
                        app:tint="@color/colorPrimaryDark" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/first_name"
                        app:boxStrokeColor="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:inputType="textCapSentences"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/last_name"
                    app:boxStrokeColor="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textCapSentences"
                        android:textColor="@color/light_black"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/ic_email"
                        app:tint="@color/colorPrimaryDark"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/email"
                        app:boxStrokeColor="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:textSize="15sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/ic_phone_contact"
                        app:tint="@color/colorPrimaryDark"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/contact_number"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:counterMaxLength="13">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="phone"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/ic_home_address"
                        app:tint="@color/colorPrimaryDark"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/address_line"
                        app:boxStrokeColor="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textCapSentences"
                            android:textColor="@color/light_black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/state"
                    android:focusableInTouchMode="false"
                    app:boxStrokeColor="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="@color/light_black"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_marginStart="45dp"
                    android:orientation="horizontal"
                    android:layout_marginEnd="10dp">


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/city"
                        android:focusableInTouchMode="false"
                        android:layout_marginHorizontal="5dp"
                        app:boxStrokeColor="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:textColor="@color/light_black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:hint="@string/pin_code"
                        android:layout_weight="1"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:counterMaxLength="6">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pin_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:maxLength="6"
                            android:inputType="number"
                            android:textColor="@color/light_black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/ic_password"
                        app:tint="@color/colorPrimaryDark"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/ic_confirm_password"
                        app:tint="@color/colorPrimaryDark"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/confirm_password"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/proceed"
                android:layout_width="140dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="135dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="135dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/proceed"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="50dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>