<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:cardCornerRadius="8dp"
        android:background="@color/white"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_account_circle_black_24dp"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:paddingHorizontal="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/prajata_samanta"
                        android:textColor="@color/light_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/id_1"
                        android:paddingHorizontal="10dp"
                        android:paddingTop="5dp"
                        android:textSize="12sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_prajata_samanta_gmail_com"
                        android:textColor="@color/grey_black"
                        android:padding="7dp"
                        android:maxLines="2"
                        android:layout_margin="3dp"
                        android:layout_alignParentBottom="true"
                        android:textSize="13sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>