<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:title="Profile"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimaryDark"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@color/light_grey"/>

            <RelativeLayout
                android:id="@+id/dp_card"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="-80dp"
                android:layout_gravity="center_horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:cardCornerRadius="65dp"
                    android:layout_centerInParent="true"
                    android:elevation="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="60dp">

                        <ImageView
                            android:id="@+id/profile_pic"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_account_circle_black_24dp" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginHorizontal="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="8dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginHorizontal="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_no"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginHorizontal="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginHorizontal="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>